--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "sass-embedded": "^1.77.8",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
-    "vite": "^5.4.0",
-    "vite-plugin-node": "^3.1.0"
+    "vite": "^5.4.0"
   }
 }
